src/test/deca/context/invalid/class_cmp_null_invalid.deca
//  Description : 
// 
//      Test incorrect qui execute une comparaison d'un int et d'un null
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

if(2!=null){
    println("ok");
}